feat(api): add GraphQL server
